# Report-Card-System

./: Dockerfile  README.md  Report_card_system_postman_collection.json  db.sqlite3  pyproject.toml  pytest.ini  requirements.txt
core/: models.py  routers.py  serializers.py  tasks.py  tests.py  viewsets.py
core/migrations/: 0001_initial.py  0002_alter_reportcard_term_alter_reportcard_year.py
core/tests/: test_models.py  test_serializers.py  test_viewsets.py
reportcard/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
