[project]
name = "reportcard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.4",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "redis>=6.4.0",
]
